name:                   erf-native
version:                1.0.0.0
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <your email here>
maintainer:             James Cook <your email here>
license:                GPL
homepage:               /dev/null

category:               Unclassified
synopsis:               Native Haskell implementation of the interface from the erf package
description:            Native Haskell implementation of the interface from the erf package.
                        I have had problems getting the erf package to work on Windows systems,
                        so I'm throwing this one out there.  It incorporates code translated 
                        from GSL's C source, and so is licensed under the GPL.

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Number.Erf
  other-modules:        GSL.SpecFunc.Erf
                        NR.Ch5.S8
  build-depends:        base >= 3 && <5, vector
