name:                   erf-native
version:                1.0.0.1
stability:              provisional

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                GPL
license-file:           LICENSE
homepage:               https://github.com/mokus0/erf-native

category:               Math
synopsis:               Native Haskell implementation of the interface from the erf package
description:            Native Haskell implementation of the interface from the erf package.
                        I have had problems getting the erf package to work on Windows systems,
                        so I'm throwing this one out there.  It incorporates code translated 
                        from GSL's C source, and so is licensed under the GPL.

source-repository head
  type: git
  location: git://github.com/mokus0/erf-native.git

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Number.Erf
  other-modules:        GSL.SpecFunc.Erf
  build-depends:        base >= 3 && <5, polynomial
